# dsgd

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.py  data.py  k8s-build-job.yaml  logger.py  main.py  metrics.py  model.py  models.py  plot.py  pod-monitor.yaml  prometheus-values.yaml  pyproject.toml  ray-job-allreduce-2workers.yaml  ray-job-allreduce-4workers.yaml  ray-job-allreduce-8workers.yaml  ray-job-compare-asgd.yaml  ray-job-compare-localsgd.yaml  ray-job-compare-ssgd.yaml  ray-job-compare-ssp.yaml  ray-job-straggler-test.yaml  ray-job.yaml  run_test.sh  train_asgd.py  train_localsgd.py  train_ssgd.py  train_ssp.py  utils.py
tf/: .terraform.lock.hcl  README.md  dcgm-configmap.conf  dcgm-exporter-values.yaml  ecr.tf  helm.tf  karpenter-config.tf  karpenter-values.yaml  main.tf  nvidia-device-plugin-values.yaml  outputs.tf  prometheus-values.yaml  ray-values.yaml  s3.tf  storage.tf  storageclass-gp3.yaml
