[project]
name = "ddp"
version = "0.1.0"
description = "Distributed Deep Learning Seminar - Code examples for distributed training strategies"
authors = [
    { name = "Yahli Ramberg", email = "lryahli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "ray>=2.49.2",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
]
