[project]
name = "ddp"
version = "0.1.0"
description = "Distributed Deep Learning Seminar - Code examples for distributed training strategies"
authors = [{ name = "Yahli Ramberg" }]
requires-python = ">=3.13"
dependencies = [
  "ray[default,data,train]>=2.52.0",
  "torch>=2.10.0",
  "boto3>=1.42.36",
  "tqdm>=4.66.0",
  "rich>=14.3.2",
]

[dependency-groups]
# Optional dependencies for local development and plotting
dev = [
  "matplotlib>=3.10.6",
  "pandas>=2.3.3",
  "ipykernel>=7.1.0",
  "pyarrow>=23.0.0",
]

# Platform-specific PyTorch sources
# - macOS/Windows: CPU-only builds
# - Linux: CUDA 13.0 builds for GPU support
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
